Create features for DSSP and pins

--- a/projects/demo-showcase/src/app/app.component.html
+++ b/projects/demo-showcase/src/app/app.component.html
@@ -22,10 +22,15 @@
       <img src="assets/biocomp-white.png" alt="BioComputing UP" height="36">
     </div>
     <!-- Center: my own GitHub -->
-    <div class="col-6 d-flex align-items-center justify-content-center">
-        <a class="text-light small" href="https://github.com/damiclem">
-          Developed by Damiano Clementel <i class="bi bi-github"></i>
-        </a>
+    <div class="col-6 d-flex align-items-center justify-content-center text-white">
+      Developed by
+      <a class="text-light small mx-2" href="https://github.com/damiclem">
+        Damiano Clementel <i class="bi bi-github"></i>
+      </a>
+      &
+      <a class="text-light small mx-2" href="https://github.com/alessiodelconte">
+        Alessio Del Conte <i class="bi bi-github"></i>
+      </a>
     </div>
     <!-- Right side: UniPD -->
     <div class="col-3 d-flex justify-content-end">
