Added label on locus iif wide enough. Working on zoom selection

--- a/projects/demo-showcase/src/app/page-features-viewer/page-features-viewer.component.scss
+++ b/projects/demo-showcase/src/app/page-features-viewer/page-features-viewer.component.scss
@@ -1,1 +1,5 @@
-
+ngx-features-viewer {
+    --feature-cursor: pointer;
+    --locus-hover-outline: 2px outset #00ffa0;
+    --locus-hover-border-radius: 4px;
+}
