--- a/projects/ngx-features-viewer/src/styles/_icons.scss
+++ b/projects/ngx-features-viewer/src/styles/_icons.scss
@@ -1,4 +1,3 @@
-$bootstrap-icons-font-src: 
-    url("../../../../node_modules/bootstrap-icons/font/fonts/bootstrap-icons.woff2") format("woff2"), 
-    url("../../../../node_modules/bootstrap-icons/font/fonts/bootstrap-icons.woff") format("woff");
+$bootstrap-icons-font-src: url("../../../../node_modules/bootstrap-icons/font/fonts/bootstrap-icons.woff2") format("woff2"),
+url("../../../../node_modules/bootstrap-icons/font/fonts/bootstrap-icons.woff") format("woff");
 @import "../../../../node_modules/bootstrap-icons/font/bootstrap-icons.scss";
