--- a/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.html
+++ b/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.html
@@ -1,11 +1,11 @@
 <div style="position: relative; display: block; width: 100%; height: 100%;" #root>
   <!-- Case template for left label exists -->
-  @if (initService.labelLeft) {
+  @if (initializeService.labelLeft; as label) {
     <!-- Loop through each trace, generate custom tooltip -->
     @for (trace of featuresService.tracesNoNesting; track trace) {
       <!-- Then, generate trace as specified in the given template -->
       <div [id]="'label-left-' + trace.id" tabindex=0 (click)="drawService.onLabelClick(trace)" (keyup)="drawService.onLabelClick(trace)" [style.display]="trace.show ? 'block' : 'none'">
-        <ng-container [ngTemplateOutlet]="initService.labelLeft.templateRef" [ngTemplateOutletContext]="{ trace: trace }"></ng-container>
+        <ng-container [ngTemplateOutlet]="label.templateRef" [ngTemplateOutletContext]="{ trace: trace }"></ng-container>
       </div>
     }
   }
@@ -34,7 +34,6 @@
       }
     </div>
   </div>
-
 </div>
 
 <ng-template let-trace="trace" let-feature="feature" let-index="index" let-coordinates="coordinates" ngx-features-viewer-tooltip>
