Debounce time for multiple clicks, use observable on select feature emit

--- a/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.html
+++ b/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.html
@@ -42,3 +42,5 @@
   Index: {{ index }}<br>
   Coordinates: ({{ coordinates[0] }}, {{ coordinates[1] }})<br>
 </ng-template>
+
+<ng-container *ngIf="drawService.selectedFeature$ | async"></ng-container>
