Add polygon feature, refactor grid generation

--- a/projects/demo-showcase/src/app/page-features-viewer/page-features-viewer.component.html
+++ b/projects/demo-showcase/src/app/page-features-viewer/page-features-viewer.component.html
@@ -21,7 +21,8 @@
   </div>
   <!-- Show output -->
   <div style="display: block; height: auto; width: 100%;">
-    <ngx-features-viewer [sequence]="sequence" [traces]="traces" [settings]="settings.outer" (selectedFeature)="onFeatureSelected($event)">
+    <ngx-features-viewer [sequence]="sequence" [traces]="traces" [settings]="settings.outer"
+                         (selectedFeature)="onFeatureSelected($event)">
       <!-- Left label -->
       <ng-template let-trace="trace" ngx-features-viewer-label>
         <div class="d-flex h-100 w-100 justify-content-start pe-0 align-items-center font-monospace">
@@ -45,25 +46,28 @@
       <!-- Tooltip template -->
       <ng-template let-trace="trace" let-feature="feature" let-index="index" let-coordinates="coordinates"
                    ngx-features-viewer-tooltip>
-        <div class="rounded bg-white shadow-sm p-3" style="width: 400px; height: auto">
-          <p>
-            {{ feature.label }}
-          </p>
-          <p>
-            {{ index }}
-          </p>
-          <p>
-            {{ coordinates }}
-          </p>
-          <!--          <ngx-features-viewer [sequence]="sequence" [settings]="settings.inner" [traces]="[trace]">-->
-          <!--            &lt;!&ndash; Define simple label left &ndash;&gt;-->
-          <!--            <ng-template let-trace="trace" ngx-features-viewer-label>-->
-          <!--              <div class="d-flex h-100 w-100 justify-content-start pe-0 align-items-center font-monospace">-->
-          <!--                {{ trace.label }}-->
-          <!--              </div>-->
-          <!--            </ng-template>-->
-          <!--          </ngx-features-viewer>-->
+        <div class="card">
+          <div class="card-header">
+            <h5 class="card-title">{{ feature.label }}</h5>
+          </div>
+          <div class="card-body">
+            <p class="card-text">
+              {{ index }}
+            </p>
+            <p class="card-text">
+              {{ coordinates }}
+            </p>
+          </div>
         </div>
+
+        <!--          <ngx-features-viewer [sequence]="sequence" [settings]="settings.inner" [traces]="[trace]">-->
+        <!--            &lt;!&ndash; Define simple label left &ndash;&gt;-->
+        <!--            <ng-template let-trace="trace" ngx-features-viewer-label>-->
+        <!--              <div class="d-flex h-100 w-100 justify-content-start pe-0 align-items-center font-monospace">-->
+        <!--                {{ trace.label }}-->
+        <!--              </div>-->
+        <!--            </ng-template>-->
+        <!--          </ngx-features-viewer>-->
       </ng-template>
     </ngx-features-viewer>
   </div>
