--- a/projects/demo-showcase/src/app/page-features-viewer/page-features-viewer.component.scss
+++ b/projects/demo-showcase/src/app/page-features-viewer/page-features-viewer.component.scss
@@ -1,5 +1,6 @@
 ngx-features-viewer {
     --feature-cursor: pointer;
+    --overlay-cursor: col-resize;
     --locus-hover-outline: 2px outset #00ffa0;
     --locus-hover-border-radius: 4px;
 }
