--- a/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.html
+++ b/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.html
@@ -4,39 +4,41 @@
     <!-- Loop through each trace, generate custom tooltip -->
     @for (trace of featuresService.tracesNoNesting; track trace) {
       <!-- Then, generate trace as specified in the given template -->
-      <div [id]="'label-left-' + trace.id" tabindex=0 (click)="drawService.onLabelClick(trace)" (keyup)="drawService.onLabelClick(trace)" [style.display]="trace.show ? 'block' : 'none'">
-        <ng-container [ngTemplateOutlet]="label.templateRef" [ngTemplateOutletContext]="{ trace: trace }"></ng-container>
+      <div [id]="'label-left-' + trace.id" tabindex=0 (click)="drawService.onLabelClick(trace)"
+           (keyup)="drawService.onLabelClick(trace)" [style.display]="trace.show ? 'block' : 'none'">
+        <ng-container [ngTemplateOutlet]="label.templateRef"
+                      [ngTemplateOutletContext]="{ trace: trace }"></ng-container>
       </div>
     }
   }
   <!-- Case template for right label exists -->
-  <!--  @if (initService.labelRight) {-->
-  <!--    &lt;!&ndash; Loop through each trace, generate custom tooltip &ndash;&gt;-->
-  <!--    @for (trace of drawService.traces$ | async; track trace.id) {-->
-  <!--      @if (trace.show) {-->
-  <!--        &lt;!&ndash; Then, generate trace as specified in the given template &ndash;&gt;-->
-  <!--        <div [id]="'label-right-' + trace.id" tabindex=0>-->
-  <!--          <ng-container [ngTemplateOutlet]="initService.labelRight.templateRef"-->
-  <!--                        [ngTemplateOutletContext]="{ trace: trace }"></ng-container>-->
-  <!--        </div>-->
-  <!--      }-->
-  <!--    }-->
-  <!--  }-->
+  @if (initializeService.labelRight) {
+    <!-- Loop through each trace, generate custom tooltip -->
+    @for (trace of drawService.traces$ | async; track trace.id) {
+      <!-- Then, generate trace as specified in the given template -->
+      <div [id]="'label-right-' + trace.id" tabindex=0 [style.display]="trace.show ? 'block' : 'none'">
+        <ng-container [ngTemplateOutlet]="initializeService.labelRight.templateRef"
+                      [ngTemplateOutletContext]="{ trace: trace }"></ng-container>
+      </div>
+    }
+  }
 
   <!-- Initialize tooltip -->
   <div style="position: absolute; left: 0; top: 0; display: none" #tooltip>
     <!-- Define tooltip inner scaffold -->
     <div style="position: relative; display: block">
       <!-- Subscribe to template emission -->
-      @if(tooltipService.tooltip$ | async; as context) {
+      @if (tooltipService.tooltip$ | async; as context) {
         <!-- Show template -->
-        <ng-container [ngTemplateOutlet]="tooltipService.templateRef" [ngTemplateOutletContext]="context"></ng-container>
+        <ng-container [ngTemplateOutlet]="tooltipService.templateRef"
+                      [ngTemplateOutletContext]="context"></ng-container>
       }
     </div>
   </div>
 </div>
 
-<ng-template let-trace="trace" let-feature="feature" let-index="index" let-coordinates="coordinates" ngx-features-viewer-tooltip>
+<ng-template let-trace="trace" let-feature="feature" let-index="index" let-coordinates="coordinates"
+             ngx-features-viewer-tooltip>
   Trace: {{ trace.id }}<br>
   Feature: {{ feature.type }}<br>
   Index: {{ index }}<br>
